# fixed-size-hash

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  run_build.sh
example/: CMakeLists.txt  main.cpp
include/: example.hpp
include/fixed-size/: array_hash.hpp  hash.hpp  hash_combine.hpp  pair_hash.hpp  prelude.hpp  tuple_hash.hpp
tests/: CMakeLists.txt  custom_test.cpp  test.cpp
